--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,7 @@ body {
 button, input {
     font-size:var(--space-0);
     height: var(--space-4);
-    min-width: var(--space-4);
     box-sizing: border-box;
-    /*margin-right: var(--space-);*/
     padding: 0 var(--space-0) 0 var(--space-0);
 
     border-radius: var(--space--4);
@@ -77,13 +75,11 @@ h1, h2, h3, h4 {
 }
 h1 {
     font-size: var(--space-3);
-    /*line-height:var(--space-5);*/
-    line-height: 1.2;
+    line-height: 1;
 }
 h2 {
     font-size:var(--space-2);
-    /*line-height:var(--space-5);*/
-    line-height: 1.5;
+    line-height: 1;
 }
 h3 {
     font-size:var(--space-1);
@@ -100,7 +96,7 @@ h4 {
     display:grid;
     grid-template-columns:1fr 9ch;
     max-width:50ch;
-    margin-bottom:var(--space--3);
+    margin-top:var(--space--3);
     line-height:var(--space-4);
 }
 .input_set > input {
@@ -128,7 +124,7 @@ header {
     top: 0;
 
     display: grid;
-    grid-template-columns: 1fr var(--space-5);
+    grid-template-columns: 1fr var(--space-3);
     padding: var(--space--2);
     box-sizing: border-box;
     z-index: 10;
@@ -141,10 +137,8 @@ header > h1 {
     transition: font-size 0.3s;
 }
 header > button {
-    width: var(--space-5);
-    height: var(--space-5);
-    height: calc(1.2 * var(--space-3));
-    width: calc(1.2 * var(--space-3));
+    height: var(--space-3);
+    width: var(--space-3);
     align-self: end;
     padding: 0;
 }
@@ -152,9 +146,9 @@ header > button {
 
 
 
-#main > #simulation_container{
-    margin:auto;
-    display:block;
+#simulation_container, #control_center {
+    margin-top: var(--space--3);
+    padding: var(--space--3);
 }
 
 #main > #overlay {
@@ -183,18 +177,13 @@ header > button {
     overflow: auto;
     box-sizing:border-box;
     background-color:#FFF;
-    border-radius: var(--space--2);
+    border-radius: var(--space--4);
 }
 
 
 
 
 @media (min-width: 800px) {
-    header > h1 {
-        font-size: var(--space-4);
-        /*line-height: var(--space-5);*/
-        line-height: 1.2;
-    }
     header > button, #control_center_header > button {
         display:none;
     }
@@ -207,7 +196,7 @@ header > button {
     }
 
     #main > #simulation_container {
-        margin:0;
+        margin: var(--space--3) 0 0 0;
         max-width:none;
     }
 
@@ -235,7 +224,11 @@ header > button {
 
 #simulation_container {
     max-width:500px;
-    padding:var(--space--2);
+    padding:var(--space--3);
+    margin: var(--space--3) auto auto auto;
+}
+#simulation_container > * + * {
+    margin-top: var(--space--3);
 }
 #environment {
     position:relative;
@@ -243,7 +236,6 @@ header > button {
     height:0;
     padding-bottom:100%;
     background-color:#DDD;
-    margin:auto;
 }
 
 #environment > .creature {
@@ -268,8 +260,8 @@ header > button {
 
 
 
-#control_center > div {
-    padding:var(--space--2);
+#control_center >.tab > * + * {
+    margin-top: var(--space--3);
 }
 
 #control_center_header {
@@ -282,11 +274,8 @@ header > button {
 
 #control_center_header > button {
     float:right;
-    /*height: var(--space-5);*/
-    /*width: var(--space-5);*/
-    height: calc(1.5 * var(--space-2));
-    width: calc(1.5 * var(--space-2));
-    /*margin-top: calc((3rem - var(--space-2)) / 2);*/
+    height: var(--space-2);
+    width: var(--space-2);
     padding: 0;
 }
 
