--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,23 @@
 @font-face {
-    font-family: "Roboto";
+    font-family: "Raleway";
     font-weight: 400;
-    src: url("Roboto/Roboto-Regular.ttf");
+    src: url("Raleway/Raleway-Regular.ttf");
 }
 @font-face {
-    font-family: "Roboto";
+    font-family: "Open Sans";
     font-weight: 600;
-    src: url("Roboto/Roboto-Medium.ttf");
+    src: url("Raleway/Raleway-Medium.ttf");
+}
+@font-face {
+    font-family: "Open Sans";
+    font-weight: 800;
+    src: url("Raleway/Raleway-Bold.ttf");
 }
 
 
 
 :root {
-    --ratio: 1.25;
+    --ratio: 1.20;
     --space--6: calc(var(--space--5) / var(--ratio));
     --space--5: calc(var(--space--4) / var(--ratio));
     --space--4: calc(var(--space--3) / var(--ratio));
@@ -31,20 +36,20 @@
 
 
 body {
-    font-family: "Roboto", sans-serif;
-    line-height:1.5;
+    font-family: "Open Sans", sans-serif;
+    line-height:1.2;
     margin-top: 0;
 }
 
 
 
 button, input {
-    font-size:var(--space-0);
+    font-size:var(--space--1);
     height: var(--space-4);
     box-sizing: border-box;
     padding: 0 var(--space-0) 0 var(--space-0);
 
-    border-radius: var(--space--4);
+    border-radius: 4px;
     border: 1px solid #DDD;
     background: #FFF;
 }
@@ -52,7 +57,7 @@ button, input {
 button {
     color: #07b;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 800;
 }
 button:active {
     background-color:#EEE;
@@ -76,18 +81,20 @@ h1, h2, h3, h4 {
 h1 {
     font-size: var(--space-3);
     line-height: 1;
+    font-weight: 800;
 }
 h2 {
     font-size:var(--space-2);
     line-height: 1;
+    font-weight: 600;
 }
 h3 {
     font-size:var(--space-1);
-    line-height: 1.5;
+    line-height: 1.2;
 }
 h4 {
     font-size:var(--space-0);
-    line-height: 1.5;
+    line-height: 1.2;
 }
 
 
@@ -95,9 +102,10 @@ h4 {
 .input_set {
     display:grid;
     grid-template-columns:1fr 9ch;
+    align-items: center;
     max-width:50ch;
-    margin-top:var(--space--3);
-    line-height:var(--space-4);
+    margin-top:var(--space--5);
+    line-height: 1.2;
 }
 .input_set > input {
     max-width:9ch;
@@ -117,6 +125,7 @@ h4 {
 
 #placeholder {
     height: var(--space-3);
+    display: none;
 }
 
 header {
@@ -125,16 +134,15 @@ header {
 
     display: grid;
     grid-template-columns: 1fr var(--space-3);
-    padding: var(--space--2);
+    padding: var(--space--3);
+    padding-top: var(--space-3);
+    padding-bottom: var(--space--5);
     box-sizing: border-box;
     z-index: 10;
 
     border-bottom: 1px solid #DDD;
     background: #FFF;
     transition: padding 0.3s;
-}
-header > h1 {
-    transition: font-size 0.3s;
 }
 header > button {
     height: var(--space-3);
@@ -147,7 +155,7 @@ header > button {
 
 
 #simulation_container, #control_center {
-    margin-top: var(--space--3);
+    margin-top: var(--space--5);
     padding: var(--space--3);
 }
 
@@ -177,7 +185,7 @@ header > button {
     overflow: auto;
     box-sizing:border-box;
     background-color:#FFF;
-    border-radius: var(--space--4);
+    border-radius: 4px;
 }
 
 
@@ -196,7 +204,7 @@ header > button {
     }
 
     #main > #simulation_container {
-        margin: var(--space--3) 0 0 0;
+        margin: var(--space--5) 0 0 0;
         max-width:none;
     }
 
@@ -224,11 +232,10 @@ header > button {
 
 #simulation_container {
     max-width:500px;
-    padding:var(--space--3);
-    margin: var(--space--3) auto auto auto;
+    margin: var(--space--5) auto auto auto;
 }
 #simulation_container > * + * {
-    margin-top: var(--space--3);
+    margin-top: var(--space--5);
 }
 #environment {
     position:relative;
@@ -253,7 +260,7 @@ header > button {
 }
 
 #environment + .input_set {
-    margin-top: var(--space--3);
+    margin-top: var(--space--5);
 }
 
 
@@ -261,7 +268,7 @@ header > button {
 
 
 #control_center >.tab > * + * {
-    margin-top: var(--space--3);
+    margin-top: var(--space--5);
 }
 
 #control_center_header {
