--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,5 @@
 @font-face {
     font-family: "Raleway";
-    font-weight: 900;
-    src: url("Raleway/Raleway-ExtraBold.ttf");
-}
-@font-face {
-    font-family: "Raleway";
     font-weight: 600;
     src: url("Raleway/Raleway-Medium.ttf");
 }
@@ -13,13 +8,18 @@
     font-weight: 800;
     src: url("Raleway/Raleway-Bold.ttf");
 }
+@font-face {
+    font-family: "Raleway";
+    font-weight: 900;
+    src: url("Raleway/Raleway-ExtraBold.ttf");
+}
+
+
 
 
 
 :root {
     --ratio: 1.20;
-    --space--6: calc(var(--space--5) / var(--ratio));
-    --space--5: calc(var(--space--4) / var(--ratio));
     --space--4: calc(var(--space--3) / var(--ratio));
     --space--3: calc(var(--space--2) / var(--ratio));
     --space--2: calc(var(--space--1) / var(--ratio));
@@ -35,6 +35,8 @@
 
 
 
+
+
 body {
     font-family: "Raleway", sans-serif;
     line-height:1.2;
@@ -42,6 +44,8 @@ body {
     margin-top: 0;
     background-color: #EEE;
 }
+
+
 
 
 
@@ -74,6 +78,10 @@ button.primary {
 button.primary:active {
     background: #059;
 }
+button.negative {
+    color: #F50;
+}
+
 
 
 
@@ -102,18 +110,18 @@ h4 {
 
 
 
+
+
 .input_set {
     display: flex;
     align-items: center;
-    max-width:500px;
-    margin-top:var(--space--5);
-    line-height: 1.2;
+    max-width: 500px;
 }
 .input_set > label {
     flex-grow: 1;
 }
 .input_set > input {
-    max-width:9ch;
+    max-width: 9ch;
 }
 
 
@@ -121,6 +129,81 @@ h4 {
 
 
 
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(100% - var(--space-4));
+    max-width: 500px;
+    max-height: calc(100vh - 2 * var(--space-4));
+    padding: var(--space--3);
+    padding-top: 0;
+    box-sizing: border-box;
+    z-index: 30;
+    overflow: auto;
+
+    border-radius: 4px;
+    background-color: #FFF;
+    box-shadow: 0 5px 25px rgba(0,0,0,0.3);
+    animation: popup 0.3s;
+    transition: opacity 0.3s, top 0.3s;
+}
+@keyframes popup {
+    from {
+        opacity: 0;
+        top: 60%;
+    }
+}
+
+
+.popup > .popup_header {
+    position: sticky;
+    top:  0;
+    height: var(--space-3);
+    padding-top: var(--space--3);
+    border-bottom: 1px solid #DDD;
+    background-color: #FFF;
+}
+.popup > .popup_header > h2 {
+    display: inline-block;
+    line-height: var(--space-3);
+}
+.popup > .popup_header > button {
+    float: right;
+    height: var(--space-3);
+    width: var(--space-3);
+    padding: 0;
+    border: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.popup > * + * {
+    margin-top: var(--space--3);
+}
+
+
+
+#overlay {
+    display:none;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index: 20;
+    background-color:rgba(0,0,0,0.3);
+    animation: fade_in 0.3s;
+    transition: opacity 0.3s;
+}
+
+@keyframes fade_in {
+    from {
+        opacity: 0;
+    }
+}
 
 
 
@@ -145,8 +228,7 @@ header {
     padding: var(--space-0) var(--space--3);
     box-sizing: border-box;
     z-index: 10;
-
-    /*box-shadow: 0 0 4px rgba(0,0,0,0.3);*/
+    
     border-bottom: 1px solid #DDD;
     background: #FFF;
     transition: padding 0.3s;
@@ -157,101 +239,23 @@ header + .placeholder {
 header > h1 {
     line-height: var(--space-3);
 }
-header > button {
-    height: var(--space-3);
-    width: var(--space-3);
-    align-self: end;
-    padding: 0;
-}
 
 
 
 
-#simulation_container, #control_center {
+
+#simulation_container, #button_container {
     padding: var(--space--3);
+    max-width:500px;
+    margin: var(--space--3) auto auto auto;
     
     border: 1px solid #DDD;
     border-radius: 4px;
     background-color: #FFF;
 }
 
-#main > #overlay {
-    display:none;
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    z-index: 20;
-    background-color:rgba(0,0,0,0.3)
-}
 
 
-#main > #control_center {
-    display:none;
-
-    position:fixed;
-    top:50%;
-    left:50%;
-    transform:translate(-50%, -50%);
-    width:calc(100% - var(--space-4));
-    max-width:500px;
-    max-height:calc(100vh - 2 * var(--space-4));
-    z-index: 30;
-    overflow: auto;
-    box-sizing:border-box;
-    border-radius: 4px;
-}
-
-
-
-
-@media (min-width: 800px) {
-    header > button, #control_center_header > button {
-        display:none;
-    }
-
-    #main {
-        display:grid;
-        grid-template-columns:repeat(2, 1fr);
-        grid-template-rows: 1fr;
-        grid-gap: var(--space--3);
-    }
-
-    #main > #simulation_container, #main > #control_center {
-        margin: var(--space--3) 0 0 0;
-        max-width:none;
-    }
-
-    #main > #control_center {
-        display:block;
-        position:static;
-        transform:none;
-        max-width:none;
-        width:100%;
-        z-index: 0;
-    }
-}
-
-
-
-@media (min-width: 1200px) {
-    #main {
-        grid-template-columns:1fr 2fr;
-    }
-}
-
-
-
-
-
-#simulation_container {
-    max-width:500px;
-    margin: var(--space--3) auto auto auto;
-}
-#simulation_container > * + * {
-    margin-top: var(--space--3);
-}
 #environment {
     position:relative;
     width:100%;
@@ -280,47 +284,19 @@ header > button {
 
 
 
-
-
-#control_center >.tab > * + * {
+#button_container {
     margin-top: var(--space--3);
-}
-
-#control_center_header {
-    position:sticky;
-    top:0;
-    background-color:#FFF;
-    border-bottom: 1px solid #DDD;
-    padding-bottom: 0 !important;
-}
-
-#control_center_header > button {
-    float:right;
-    height: var(--space-2);
-    width: var(--space-2);
-    padding: 0;
-}
-
-#control_center_header > #tab_switcher {
-    overflow-x:auto;
-    overflow-y:hidden;
-    white-space:nowrap;
-    margin-top: var(--space--3);
-}
-#control_center_header > #tab_switcher > button {
-    border: 0;
-    border-radius: 0;
-    color: #666;
-}
-#control_center_header > #tab_switcher > button.highlighted {
-    color: #07C;
-    border-bottom: 2px solid #07C;
-}
-
-#control_center > #statistics_container > .chart_container {
+    display: flex;
+    padding: var(--space--3);
+    background-color: #FFF;
     border: 1px solid #DDD;
     border-radius: 4px;
-    padding: var(--space--3);
-    margin-top: var(--space--3);
-    
+}
+#button_container > button {
+    flex-grow: 1;
+    height: var(--space-6);
+    font-size: var(--space-1);
+}
+#button_container > button + button {
+    margin-left: var(--space--3);
 }
