Validation of input parameters before saving

--- a/styles.css
+++ b/styles.css
@@ -211,6 +211,16 @@ h4 {
 
 
 
+#error_container {
+    color: #F50;
+}
+#error_container > span {
+    display: block;
+}
+
+
+
+
 
 
 #placeholder {
