--- a/fontello/css/fontello-codes.css
+++ b/fontello/css/fontello-codes.css
@@ -2,4 +2,5 @@
 .icon-population:before { content: '\e800'; } /* '' */
 .icon-time:before { content: '\e801'; } /* '' */
 .icon-statistics:before { content: '\e802'; } /* '' */
+.icon-cancel:before { content: '\e803'; } /* '' */
 .icon-parameters:before { content: '\f1de'; } /* '' */
