--- a/fontello/css/fontello.css
+++ b/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?33117422');
-  src: url('../font/fontello.eot?33117422#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?33117422') format('woff2'),
-       url('../font/fontello.woff?33117422') format('woff'),
-       url('../font/fontello.ttf?33117422') format('truetype'),
-       url('../font/fontello.svg?33117422#fontello') format('svg');
+  src: url('../font/fontello.eot?50464774');
+  src: url('../font/fontello.eot?50464774#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?50464774') format('woff2'),
+       url('../font/fontello.woff?50464774') format('woff'),
+       url('../font/fontello.ttf?50464774') format('truetype'),
+       url('../font/fontello.svg?50464774#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?33117422#fontello') format('svg');
+    src: url('../font/fontello.svg?50464774#fontello') format('svg');
   }
 }
 */
@@ -58,4 +58,5 @@
 .icon-population:before { content: '\e800'; } /* '' */
 .icon-time:before { content: '\e801'; } /* '' */
 .icon-statistics:before { content: '\e802'; } /* '' */
+.icon-cancel:before { content: '\e803'; } /* '' */
 .icon-parameters:before { content: '\f1de'; } /* '' */
