--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ body {
     line-height:1.2;
     margin: var(--space--3);
     margin-top: 0;
+    color: #333;
     background-color: #EEE;
 }
 
@@ -62,6 +63,7 @@ button, input {
 
     border-radius: 4px;
     border: 1px solid #DDD;
+    color: #333;
     background: #FFF;
 }
 
@@ -69,6 +71,7 @@ button {
     color: #07b;
     text-transform: uppercase;
     font-weight: 900;
+    float: left; /* This is meant to get rid of the automatic small spaces between buttons */
 }
 button:active {
     background-color:#EEE;
@@ -117,15 +120,15 @@ h4 {
 
 
 .input_set {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 8ch;
     align-items: center;
-    max-width: 500px;
 }
 .input_set > label {
-    flex-grow: 1;
+    word-break: break-all;
 }
 .input_set > input {
-    max-width: 9ch;
+    width: 100%;
 }
 
 
@@ -306,4 +309,14 @@ header > h1 {
     padding: 0;
     border: 0;
     font-size: var(--space-1);
+}
+
+
+
+
+#time_container > .input_set {
+    grid-template-columns: 1fr 10ch;
+}
+#time_container > button + button {
+    margin-left: var(--space--3);
 }
