--- a/fontello/css/fontello-codes.css
+++ b/fontello/css/fontello-codes.css
@@ -3,4 +3,5 @@
 .icon-time:before { content: '\e801'; } /* '' */
 .icon-statistics:before { content: '\e802'; } /* '' */
 .icon-cancel:before { content: '\e803'; } /* '' */
+.icon-settings:before { content: '\e804'; } /* '' */
 .icon-parameters:before { content: '\f1de'; } /* '' */
