--- a/fontello/css/fontello-codes.css
+++ b/fontello/css/fontello-codes.css
@@ -4,4 +4,5 @@
 .icon-statistics:before { content: '\e802'; } /* '' */
 .icon-cancel:before { content: '\e803'; } /* '' */
 .icon-settings:before { content: '\e804'; } /* '' */
+.icon-info:before { content: '\f129'; } /* '' */
 .icon-parameters:before { content: '\f1de'; } /* '' */
