--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 
 
 :root {
-    --ratio: 1.2;
+    --ratio: 1.3;
     --space--4: calc(var(--space--3) / var(--ratio));
     --space--3: calc(var(--space--2) / var(--ratio));
     --space--2: calc(var(--space--1) / var(--ratio));
@@ -38,8 +38,8 @@
 body {
     font-family: "Raleway", sans-serif;
     font-feature-settings: "lnum" 1;
-    line-height:1.2;
-    margin: var(--space--3);
+    line-height: var(--ratio);
+    margin: var(--space--2);
     margin-top: 0;
     color: #333;
     background-color: #EEE;
@@ -53,7 +53,7 @@ button, input {
     font-family: "Raleway";
     font-feature-settings: "lnum" 1;
     font-size:var(--space--1);
-    height: var(--space-4);
+    height: var(--space-3);
     box-sizing: border-box;
     padding: 0 var(--space-0) 0 var(--space-0);
 
@@ -96,28 +96,25 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-    font-size: var(--space-2);
-    line-height: 1;
+    font-size: var(--space-1);
     font-weight: 800;
 }
 
 h2 {
     font-size:var(--space-1);
-    line-height: 1;
     font-weight: 800;
 }
 
 h3 {
-    font-size:var(--space-1);
-    line-height: 1.2;
-}
-
-h4 {
     font-size:var(--space-0);
-    line-height: 1.2;
 }
 
-
+p {
+    margin: 0;
+}
+p {
+    margin-bottom: var(--space--2);
+}
 
 
 
@@ -149,7 +146,7 @@ h4 {
     width: calc(100% - var(--space-4));
     max-width: 500px;
     max-height: calc(100vh - 2 * var(--space-4));
-    padding: var(--space--3);
+    padding: var(--space--2);
     padding-top: 0;
     box-sizing: border-box;
     z-index: 30;
@@ -174,7 +171,7 @@ h4 {
     position: sticky;
     top:  0;
     height: var(--space-3);
-    padding-top: var(--space--3);
+    padding-top: var(--space--2);
     border-bottom: 1px solid #DDD;
     background-color: #FFF;
 }
@@ -195,7 +192,7 @@ h4 {
 }
 
 .popup > * + * {
-    margin-top: var(--space--3);
+    margin-top: var(--space--2);
 }
 
 
@@ -223,7 +220,7 @@ h4 {
 
 
 #parameter_inputs_container > div + div, #settings_inputs_container > div + div {
-    margin-top: var(--space--3);
+    margin-top: var(--space--2);
 }
 
 .error_container {
@@ -248,8 +245,8 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: var(--space-7);
-    padding: 0 var(--space--3);
+    height: var(--space-5);
+    padding: 0 var(--space--2);
     box-sizing: border-box;
     z-index: 10;
     border-bottom: 1px solid #DDD;
@@ -257,25 +254,25 @@ header {
 }
 
 header > h1 {
-    line-height: var(--space-7);
+    line-height: var(--space-5);
     flex-grow: 1;
 }
 
 header > button {
     border: 0;
-    height: var(--space-5);
-    width: var(--space-5);
+    height: var(--space-4);
+    width: var(--space-4);
     padding: 0;
-    margin-top: calc(var(--space-1) / 2);
+    margin-top: calc((var(--space-5) - var(--space-4)) / 2);
     color: inherit;
 }
 
 header > button + button {
-    margin-left: var(--space--3);
+    margin-left: var(--space--2);
 }
 
 header + .placeholder {
-    height: var(--space-7);
+    height: var(--space-5);
 }
 
 
@@ -284,11 +281,11 @@ header + .placeholder {
 
 #simulation_container {
     max-width: 600px;
-    margin: var(--space--3) auto auto auto;
+    margin: var(--space--2) auto auto auto;
     border: 1px solid #DDD;
     border-radius: 4px;
     background-color: #FFF;
-    padding: var(--space--3);
+    padding: var(--space--2);
     box-sizing: border-box;
 }
 
@@ -318,14 +315,14 @@ header + .placeholder {
 
 
 #button_container {
-    margin-top: var(--space--3);
+    margin-top: var(--space--2);
     display: grid;
-    grid-gap: var(--space--3);
+    grid-gap: var(--space--2);
     grid-template-columns: 1fr 1fr;
 }
 
 #button_container > button {
-    height: var(--space-5);
+    height: var(--space-4);
     width: 100%;
     padding: 0;
     font-size: var(--space--1);
@@ -348,5 +345,11 @@ header + .placeholder {
 }
 
 #time_container > button + button {
-    margin-left: var(--space--3);
+    margin-left: var(--space--2);
+}
+
+
+
+#help_container h3 {
+    line-height: var(--space-2);
 }
